Rebrand to Meros.

--- a/Merit Caching.tex
+++ b/Merit Caching.tex
@@ -21,7 +21,7 @@ By using Proof of Work to generate Merit, we can cache work, removing the need f
 
 \label{sec:license}
 \paragraph{License}
-Merit Caching was designed by Luke Parker for use by Ember. Merit Caching's design and Whitepaper, but not any implementations or pieces of code included/shipped with this Whitepaper, are in the public domain. Any included implementations and code, whether it be pseudocode, compilable code, or otherwise, are licensed under the MIT License, copyright Luke Parker as of 2018.
+Merit Caching was designed by Luke Parker for use by Meros. Merit Caching's design and Whitepaper, but not any implementations or pieces of code included/shipped with this Whitepaper, are in the public domain. Any included implementations and code, whether it be pseudocode, compilable code, or otherwise, are licensed under the MIT License, copyright Luke Parker as of 2018.
 
 \newpage
 
