--- a/Merit Caching.tex
+++ b/Merit Caching.tex
@@ -21,7 +21,7 @@ By using Proof of Work to generate Merit, we can cache work, removing the need f
 
 \label{sec:license}
 \paragraph{License}
-Merit Caching was designed by Luke Parker for use by Meros. Merit Caching's design and Whitepaper, but not any implementations or pieces of code included/shipped with this Whitepaper, are in the public domain. Any included implementations and code, whether it be pseudocode, compilable code, or otherwise, are licensed under the MIT License, copyright Luke Parker as of 2018.
+Merit Caching was designed by Luke Parker for use by Meros. Merit Caching's design and Whitepaper, but not any implementations or pieces of code included/shipped with this Whitepaper, are in the public domain. Any included implementations and code, whether it be pseudocode, compilable code, or otherwise, are licensed under the MIT License, copyright Luke Parker as of 2018-2019.
 
 \newpage
 
@@ -41,9 +41,11 @@ A blockchain is linear chunks of data (blocks), or a linked list. No existing bl
 
 Merit Caching considers the blockchain with the most accumulated work valid, just as most Proof of Work systems do. The greater work represents greater processing power and the chain is therefore the most secure. New blocks are added only if miners can generate a hash which beats the difficulty, a property that exists to require high amounts of work, and is generated based on how often blocks are added. This also allows semi-consistent spacing of blocks.
 
+It should be noted it is possible to not use Proof of Work, but instead use Proof of Stake. However, that creates concerns around the distribution of Merit.
+
 \label{sec:1.1.1}
 \subsubsection{Blocks}
-In blockchain-based cryptocurrencies, blocks contain transactions. In the Merit Caching mechanism, blocks contain a list of Verifications from the Lattice that reference transactions. By taking these Verifications from the Lattice to the Blockchain, we provide a master overview of the Lattice to be used for syncing and deciding block rewards.
+In blockchain-based cryptocurrencies, blocks contain transactions. In the Merit Caching mechanism, blocks contain a list of Verifications that reference transactions from the Lattice. By knowing every verified transaction, we provide a master overview of the Lattice to be used for syncing and deciding block rewards.
 
 \label{sec:1.2}
 \subsection{Lattice}
@@ -68,13 +70,15 @@ Merit Caching involves mining the Blockchain via a Proof of Work algorithm, and 
 
 \label{sec:2.2}
 \subsection{Verifying Transactions}
-When a new Send Entry is added to the Lattice, everyone with Merit can sign it or not sign it. Anyone who signs the Entry places their Merit behind it. A transaction only becomes valid when it has 50+\% of all Merit behind it. This means if a double spend attempt is broadcast, and both attempts are at 49.9\% because they were sent out at the same time to different parts of the network, the person with the last 0.2\% will only sign one, stopping the double spend before it's confirmed. If a malicious Merit Holder signs a double spend, that Merit Holder will lose all their Merit for this action. The Merit behind the transactions will then be recalculated, and one may need to cross the 50\% threshold again.
+When a new Entry is added to the Lattice, everyone with Merit can sign it or not sign it. Anyone who signs the Entry places their Merit behind it. A transaction only becomes valid when it has 50+\% of all Merit behind it. This means if a double spend attempt is broadcast, and both attempts are at 49.9\% because they were sent out at the same time to different parts of the network, the person with the last 0.2\% will only sign one, stopping the double spend before it's confirmed. If a malicious Merit Holder signs a double spend, that Merit Holder will lose all their Merit for this action. The Merit behind the transactions will then be recalculated, and one may need to cross the 50\% threshold again.
+
+In order to remove orphans from the equation, or positions where all created Entries never gained 50\%, it is possible to consider the Entry with the most Merit behind it the verified Entry, after said Entry's Epoch (see \hyperref[sec:2.3]{2.3}).
 
 \newpage
 
 \label{sec:2.3}
 \subsection{Incentive}
-Merit Holders earn coins from the Blockchain after an Epoch. An Epoch is a group of blocks that start on a transaction’s first appearance on the Blockchain and end a fixed amount of blocks later. If a transaction isn’t verified within its Epoch, it is orphaned. At the end of a Epoch, Merit Holders get coins based on:
+Merit Holders earn coins from the Blockchain after an Epoch. An Epoch is a group of blocks that start on a transaction’s first appearance on the Blockchain and end a fixed amount of blocks later. The purpose of the Epoch is to allow for all Verifications to be received and mined. At the end of a Epoch, Merit Holders get coins based on:
 \begin{itemize}
 \item Percent of Merit they placed behind transactions;
 \item Percent of verified transactions in this Epoch they helped verify.
@@ -88,14 +92,16 @@ Merit is earned by mining the blockchain and used to verify transactions on a La
 
 \label{sec:3.1}
 \subsection{Double Spends}
-As covered above, double spends can be submitted, yet only one will be verified without a malicious Merit Holder. When that happens, the malicious Merit Holder loses their Merit and the transactions revert to both transactions pending or one transaction verified. This would be resolved in a matter of seconds, and there's no advantage to the Merit Holder. When there's a high-value transaction, and a service wants to be absolutely sure the transaction was verified, the service can wait for the next block to be mined. That said, the service only really has to wait a few seconds for the double spend to appear on the same node and be flagged/resolved.
+As covered above, double spends can be submitted, yet only one will be verified without a malicious Merit Holder. When a Merit holder is malicious, they lose their Merit, reverting the transactions's states so either both transactions are pending or only one transaction is verified. This would be resolved in a matter of seconds, and does have partial premature detection as Nodes can see if the potential transactions are both close to 50\%, and wait seconds once one was verified to see if the other one also becomes 'verified'. When there's a high-value transaction, and a service wants to be absolutely sure the transaction was verified, the service can wait for the epoch to end. That said, the service only really has to look for other potentials, check if the potentials have relatively equal amounts of Merit behind them, and wait a few seconds for the double spend to 'succeed', before it's flagged/resolved.
 
 \label{sec:3.2}
 \subsection{51\% Attack}
 As the chain follows the most-work rule, the chain can be rewound if an attacker has 51\% of the mining power. Since Verifications are based on weight created by the Blockchain, editing the Blockchain alters transactions on a mass scale, potentially not just reverting transactions to pending but invalidating them entirely. That said, a lot of blocks must be reverted if an attacker wants to change the Merit balances significantly, and after the chain is rewound, the data from the Lattice can be resubmitted. If no conflicting data was entered in the meantime, which requires 51\% of the Merit (not the mining power), everything will go back to normal.
 
+This attack changes on an orphan-less chain, as by mining just seven blocks, it's possible to remove and replace an existing verified transaction without any Merit accumulated in advance. By adding a six block checkpoint system, this specific attack, and all 51\% attacks, can be avoided.
+
 \label{sec:3.3}
 \subsection{51\% Attack Part Two}
-Just as Blockchain miners who get 51\% of the mining power can selectively archive Verifications, causing orphaned transactions and manipulated payouts, anyone who gets 51\% of the Merit can selectively verify transactions.
+Just as Blockchain miners who get 51\% of the mining power can selectively archive Verifications, causing orphaned transactions and manipulated payouts, anyone who gets 51\% of the Merit can selectively verify transactions. That said, this would require mining 51\% of blocks for a unreasonably long time.
 
 \end{document}
